# local-opencode

./: .env.example  .env.smith-benchmark.example  .gitignore  README.md  opencode.json  pyproject.toml  requirements.txt
scripts/: download_model.py  install_ubuntu.sh  run_gateway.sh  serve_gateway.py
src/local_opencode_gateway/: __init__.py  gateway.py  tool_calls.py
tests/: test_gateway_normalize.py  test_tool_calls.py
